--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,12 @@
+Style/ClassAndModuleCamelCase:
+  Exclude:
+    - src/language_file_system.rb
+    - tests/rgss3_mock.rb
+
+Style/Documentation:
+  Exclude:
+    - tests/**/*_test.rb
+
 Style/Encoding:
   EnforcedStyle: when_needed
 
